# myflames

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LEGACY-PERL.md  LICENSE  README.md  explain.json  explain_no_intersection.json  flamegraph-enhance-tooltips.pl  mysql-explain-bargraph.pl  mysql-explain-flamegraph.pl  mysql-explain-summary.pl  mysql-explain.pl  mysql_explain.py  mysql_explain_bargraph.py  mysql_explain_flamegraph.py  pyproject.toml  requirements.txt  run-tests.sh  sample.json  stackcollapse-mysql-explain-json.pl  stackcollapse-mysql-explain-json_v1.pl  stackcollapse_mysql_explain_json.py
.claude/: ALGORITHM_ROADMAP.md  settings.json
assets/: .gitignore  README.md  build.mjs  package-lock.json  package.json  tsconfig.json  verify-animations.mjs
demos/: README  mysql-explain-fullscreen.html
dev/: README
docs/: VISUAL_EXPLAIN_REFERENCE.md  index.html
myflames/: __init__.py  _labels.py  advisor.py  cli.py  collectors.py  complexity.py  complexity_animation.py  complexity_legend.py  connector.py  flamegraph.py  glossary.py  output_bargraph.py  output_compare.py  output_compare_sidecar.py  output_diagram.py  output_diagram_graphviz.py  output_html_report.css  output_html_report.js  output_html_report.py  output_sidecar.py  output_tree.py  output_treemap.py  parser.py  render.py  teach_hooks.py
scripts/: check_fixture_drift.py  generate-fixtures.sh  generate-mariadb-fixtures.sh  regenerate_docs_demos.py
test/: README.md  _svg_contract.py  mariadb-explain-block-nl-join.json  mariadb-explain-complex.json  mariadb-explain-index-merge.json  mariadb-explain-join.json  mariadb-explain-simple-scan.json  mariadb-explain-weedout.json  mysql-explain-bka-mrr.json  mysql-explain-bnl.json  mysql-explain-complex-correlated.json  mysql-explain-complex-cte-window.json  (+25 more)
(+596 files in other folders)
