[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "myflames"
version = "1.5.0"
description = "MySQL and MariaDB EXPLAIN ANALYZE visualizer: flame graphs, bar charts, treemaps, and diagrams"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "CDDL-1.0" }

[project.scripts]
myflames = "myflames.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["myflames*"]

[tool.setuptools.package-data]
# Include CSS + all JS files (including the per-lesson .js files in
# teach/ that Tier-0 migrated out of raw-string literals).
myflames = [
    "*.css",
    "*.js",
    "assets/*.js",
    "assets/*.css",
    "teach/*.js",
    "teach/*_family/*.js",
]
